--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,15 +34,10 @@ dependencies = [
     "rich>=13.7.0",
     "pydantic>=2.5.0",
     "pillow>=10.1.0",
-    # Web application
-    "fastapi>=0.104.0",
-    "uvicorn>=0.24.0",
-    "jinja2>=3.1.2",
-    "python-multipart>=0.0.6",
-    "websockets>=12.0",
 ]
 
 [project.optional-dependencies]
+web = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "jinja2>=3.1.2", "python-multipart>=0.0.6", "websockets>=12.0"]
 dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "selenium>=4.0.0", "beautifulsoup4>=4.12.0"]
 
 [project.scripts]
