--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "langchain-anthropic>=0.2.1",
     "python-dotenv>=1.0.1",
     "langgraph-sdk>=0.1.32",
+    "sqlalchemy>=2.0.20",
     # NLP and text processing
     "spacy>=3.7.0",
     "textblob>=0.18.0",
@@ -37,7 +38,20 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-web = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "jinja2>=3.1.2", "python-multipart>=0.0.6", "websockets>=12.0"]
+web = [
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
+    "jinja2>=3.1.2",
+    "python-multipart>=0.0.6",
+    "websockets>=12.0",
+    "httpx>=0.27.0",
+    # Exports
+    "reportlab>=4.0.0",
+    "python-docx>=1.0.0",
+]
+db = [
+    "psycopg2-binary>=2.9.9"
+]
 dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "selenium>=4.0.0", "beautifulsoup4>=4.12.0"]
 
 [project.scripts]
