--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,50 +9,62 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11"
 dependencies = [
-    "langgraph>=0.6.0,<0.7.0",
-    "langchain>=0.3.8",
-    "langchain-core>=0.3.8",
-    "langchain-openai>=0.2.1",
-    "langchain-anthropic>=0.2.1",
+    # LangGraph and LangChain ecosystem
+    "langgraph>=0.7.0",
+    "langgraph-sdk>=0.1.38",
+    "langchain>=0.3.11",
+    "langchain-core>=0.3.11",
+    "langchain-openai>=0.2.5",
+    "langchain-anthropic>=0.2.5",
     "python-dotenv>=1.0.1",
-    "langgraph-sdk>=0.1.32",
-    "sqlalchemy>=2.0.20",
+    # Persistence and data access
+    "sqlalchemy>=2.0.35",
     # NLP and text processing
-    "spacy>=3.7.0",
+    "spacy>=3.7.4",
     "textblob>=0.18.0",
     "nltk>=3.8.1",
-    "transformers>=4.35.0",
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
+    "transformers>=4.44.2",
+    "torch>=2.4.0",
+    "torchvision>=0.19.0",
     # Image generation APIs
-    "openai>=1.0.0",
-    "google-cloud-aiplatform>=1.38.0",
-    "huggingface_hub>=0.19.0",
-    "requests>=2.31.0",
-    "aiohttp>=3.9.0",
+    "openai>=1.52.0",
+    "google-cloud-aiplatform>=1.70.0",
+    "huggingface_hub>=0.24.0",
+    "requests>=2.32.3",
+    "aiohttp>=3.10.5",
     # CLI and utilities
     "click>=8.1.7",
-    "rich>=13.7.0",
-    "pydantic>=2.5.0",
-    "pillow>=10.1.0",
+    "rich>=13.9.2",
+    "pydantic>=2.9.2",
+    "pillow>=10.4.0",
 ]
 
 [project.optional-dependencies]
 web = [
-    "fastapi>=0.104.0",
-    "uvicorn>=0.24.0",
-    "jinja2>=3.1.2",
-    "python-multipart>=0.0.6",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.30.6",
+    "jinja2>=3.1.4",
+    "python-multipart>=0.0.9",
     "websockets>=12.0",
-    "httpx>=0.27.0",
+    "httpx>=0.27.2",
     # Exports
-    "reportlab>=4.0.0",
-    "python-docx>=1.0.0",
+    "python-docx>=1.1.0",
+    "reportlab>=4.2.0",
+    "weasyprint>=62.3",
 ]
 db = [
     "psycopg2-binary>=2.9.9"
 ]
-dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "selenium>=4.0.0", "beautifulsoup4>=4.12.0"]
+dev = [
+    "beautifulsoup4>=4.12.3",
+    "langsmith>=0.1.37",
+    "mypy>=1.11.2",
+    "pytest>=8.3.3",
+    "pytest-asyncio>=0.23.7",
+    "pytest-cov>=5.0.0",
+    "ruff>=0.6.8",
+    "selenium>=4.24.0",
+]
 
 [project.scripts]
 illustrator = "illustrator.cli:main"
