--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ torchvision>=0.23.0
 openai>=1.109.1
 google-cloud-aiplatform>=1.117.0
 huggingface_hub>=0.35.1
+replicate>=0.29.0
 requests>=2.32.5
 aiohttp>=3.12.15
 click>=8.3.0
