--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "openai>=1.109.1",
     "google-cloud-aiplatform>=1.117.0",
     "huggingface_hub>=0.35.1",
+    "langchain-huggingface>=0.3.1",
     "replicate>=0.29.0",
     "requests>=2.32.5",
     "aiohttp>=3.12.15",
