--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DEFAULT_MODEL=anthropic/claude-3-5-sonnet-20241022
 DEFAULT_IMAGE_PROVIDER=dalle  # Options: dalle, imagen4, flux
 MAX_CHAPTER_LENGTH=50000
 DEFAULT_ILLUSTRATION_STYLE=digital_art
+
+# Database Settings
+DATABASE_URL=postgresql://illustrator:illustrator@localhost:5432/illustrator
+DB_ECHO=false  # Set to true to log SQL statements
