--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,42 @@
 # LLM Provider API Keys
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 OPENAI_API_KEY=your-openai-api-key-here
+HUGGINGFACE_API_KEY=your-huggingface-api-key-here
+REPLICATE_API_TOKEN=your-replicate-token-if-needed
 
 # Google Cloud AI Platform (for Imagen4)
 GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account-key.json
 GOOGLE_PROJECT_ID=your-google-project-id
 
-# HuggingFace (for Flux 1.1 Pro)
-HUGGINGFACE_API_KEY=your-huggingface-api-key-here
-
-# Application Settings
-DEFAULT_MODEL=anthropic/claude-3-5-sonnet-20241022
+# Default Model Selection
+DEFAULT_LLM_PROVIDER=anthropic
+DEFAULT_LLM_MODEL=anthropic/claude-3-5-sonnet-20241022
 DEFAULT_IMAGE_PROVIDER=dalle  # Options: dalle, imagen4, flux
-MAX_CHAPTER_LENGTH=50000
 DEFAULT_ILLUSTRATION_STYLE=digital_art
+
+# HuggingFace Inference Settings
+HUGGINGFACE_ENDPOINT_URL=
+HUGGINGFACE_PIPELINE_TASK=text-generation
+HUGGINGFACE_DEVICE=cpu
+HUGGINGFACE_MAX_NEW_TOKENS=512
+HUGGINGFACE_TEMPERATURE=0.7
+HUGGINGFACE_TIMEOUT=60
+
+# HuggingFace Image Generation (Flux/Diffusers)
+HUGGINGFACE_FLUX_ENDPOINT_URL=
+HUGGINGFACE_IMAGE_MODEL=black-forest-labs/FLUX.1-dev
+HUGGINGFACE_IMAGE_ENDPOINT_URL=
+HUGGINGFACE_IMAGE_PROVIDER=huggingface
+
+# Remote / Offline Modes
+ILLUSTRATOR_REMOTE_API_URL=http://127.0.0.1:8000
+ILLUSTRATOR_API_KEY=
+ILLUSTRATOR_ENFORCE_REMOTE=false
+ILLUSTRATOR_OFFLINE_MODE=false
 
 # Database Settings
 DATABASE_URL=postgresql://illustrator:illustrator@localhost:5432/illustrator
 DB_ECHO=false  # Set to true to log SQL statements
+
+# Optional Legacy Settings
+MAX_CHAPTER_LENGTH=50000  # Currently unused but kept for backward compatibility
