--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ torchvision>=0.18.0
 openai>=1.47.0
 google-cloud-aiplatform>=1.60.0
 google-auth>=2.35.0
+google-auth[aiohttp]>=2.35.0
 google-auth-oauthlib>=1.0.0
 huggingface_hub>=0.24.0
 langchain-huggingface>=0.1.0
