--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # LLM Provider API Keys
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 OPENAI_API_KEY=your-openai-api-key-here
+# Required for gpt-oss-120b (default LLM)
 HUGGINGFACE_API_KEY=your-huggingface-api-key-here
 REPLICATE_API_TOKEN=your-replicate-token-if-needed
 
@@ -9,10 +10,18 @@ GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account-key.json
 GOOGLE_PROJECT_ID=your-google-project-id
 
 # Default Model Selection
-DEFAULT_LLM_PROVIDER=anthropic
-DEFAULT_LLM_MODEL=anthropic/claude-3-5-sonnet-20241022
+DEFAULT_LLM_PROVIDER=huggingface
+DEFAULT_LLM_MODEL=openai/gpt-oss-120b
 DEFAULT_IMAGE_PROVIDER=dalle  # Options: dalle, imagen4, flux
 DEFAULT_ILLUSTRATION_STYLE=digital_art
+
+# Flux local pipeline (diffusers) settings
+FLUX_USE_PIPELINE=false
+FLUX_PIPELINE_MODEL_ID=black-forest-labs/FLUX.1-dev
+#FLUX_PIPELINE_DTYPE=float16
+#FLUX_PIPELINE_DEVICE=cuda
+#FLUX_PIPELINE_VARIANT=fp16
+#FLUX_PIPELINE_REVISION=main
 
 # HuggingFace Inference Settings
 HUGGINGFACE_ENDPOINT_URL=
