--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ nltk>=3.8.1
 transformers>=4.40.0
 torch>=2.3.0
 torchvision>=0.18.0
+diffusers>=0.30.0
+accelerate>=0.33.0
 openai>=1.47.0
 google-cloud-aiplatform>=1.60.0
 google-auth>=2.35.0
