--- a/.env.demo
+++ b/.env.demo
@@ -11,3 +11,9 @@ ILLUSTRATOR_API_KEY=demo-key-1
 
 # Image generation settings
 DEFAULT_IMAGE_PROVIDER=dalle
+
+# Database
+MONGODB_URI=mongodb://localhost:27017
+MONGO_URL=mongodb://localhost:27017
+MONGO_DB_NAME=illustrator
+MONGO_USE_MOCK=true
