--- a/.env.example
+++ b/.env.example
@@ -44,8 +44,10 @@ ILLUSTRATOR_ENFORCE_REMOTE=false
 ILLUSTRATOR_OFFLINE_MODE=false
 
 # Database Settings
-DATABASE_URL=postgresql://illustrator:illustrator@localhost:5432/illustrator
-DB_ECHO=false  # Set to true to log SQL statements
+MONGODB_URI=mongodb://localhost:27017
+MONGO_URL=mongodb://localhost:27017
+MONGO_DB_NAME=illustrator
+MONGO_USE_MOCK=false
 
 # Optional Legacy Settings
 MAX_CHAPTER_LENGTH=50000  # Currently unused but kept for backward compatibility
