--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ langchain-openai>=0.2.0
 langchain-anthropic>=0.2.0
 anthropic[vertex]>=0.34.0
 python-dotenv>=1.0.1
-sqlalchemy>=2.0.30
+pymongo>=4.7.0
+mongomock>=4.1.2
 spacy>=3.7.0
 textblob>=0.17.1
 nltk>=3.8.1
@@ -44,7 +45,6 @@ reportlab>=4.2.0
 weasyprint>=61.0
 
 # Optional database adapters
-psycopg2-binary>=2.9.9
 
 # Tooling and test dependencies
 beautifulsoup4>=4.12.0
