--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,64 +10,68 @@ license = { text = "MIT" }
 requires-python = ">=3.11"
 dependencies = [
     # LangGraph and LangChain ecosystem
-    "langgraph>=0.1.0",
-    "langgraph-sdk>=0.1.0",
-    "langchain>=0.2.0",
-    "langchain-core>=0.2.0",
-    "langchain-openai>=0.2.0",
-    "langchain-anthropic>=0.2.0",
-    "python-dotenv>=1.0.1",
+    "langgraph>=0.6.8",
+    "langgraph-sdk>=0.2.9",
+    "langchain>=0.3.27",
+    "langchain-core>=0.3.77",
+    "langchain-openai>=0.3.34",
+    "langchain-anthropic>=0.3.21",
+    "python-dotenv>=1.1.1",
     # Persistence and data access
-    "pymongo>=4.7.0",
-    "mongomock>=4.1.2",
+    "pymongo>=4.15.2",
+    "mongomock>=4.3.0",
     # NLP and text processing
-    "spacy>=3.7.0",
-    "textblob>=0.17.1",
-    "nltk>=3.8.1",
-    "transformers>=4.40.0",
-    "torch>=2.3.0",
-    "torchvision>=0.18.0",
+    "spacy>=3.8.7",
+    "textblob>=0.19.0",
+    "nltk>=3.9.2",
+    "transformers>=4.56.2",
+    "torch>=2.8.0",
+    "torchvision>=0.23.0",
+    "diffusers>=0.35.1",
+    "accelerate>=1.10.1",
     # Image generation APIs
-    "openai>=1.47.0",
-    "google-cloud-aiplatform>=1.60.0",
-    "google-auth>=2.35.0",
+    "openai>=2.0.1",
+    "google-cloud-aiplatform>=1.118.0",
+    "google-auth>=2.41.1",
     "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>0.2.0",
-    "anthropic[vertex]>=0.34.0",
-    "huggingface_hub>=0.24.0",
-    "langchain-huggingface>=0.1.0",
-    "replicate>=0.24.0",
-    "requests>=2.31.0",
-    "aiohttp>=3.9.0",
+    "google-auth-oauthlib>=1.2.2",
+    "anthropic[vertex]>=0.69.0",
+    "huggingface_hub>=0.35.3",
+    "langchain-huggingface>=0.3.1",
+    "replicate>=1.0.7",
+    "requests>=2.32.5",
+    "aiohttp>=3.12.15",
     # CLI and utilities
-    "click>=8.1.7",
-    "rich>=13.7.0",
-    "pydantic>=2.7.0",
-    "pillow>=10.4.0",
+    "click>=8.3.0",
+    "rich>=14.1.0",
+    "pydantic>=2.11.9",
+    "pillow>=11.3.0",
+    "typing_extensions>=4.15.0",
 ]
 
 [project.optional-dependencies]
 web = [
-    "fastapi>=0.115.0",
-    "uvicorn>=0.30.0",
-    "jinja2>=3.1.4",
-    "python-multipart>=0.0.9",
-    "websockets>=12.0",
-    "httpx>=0.27.0",
+    "fastapi>=0.118.0",
+    "uvicorn>=0.37.0",
+    "jinja2>=3.1.6",
+    "python-multipart>=0.0.20",
+    "websockets>=15.0.1",
+    "httpx>=0.28.1",
     # Exports
-    "python-docx>=1.1.0",
-    "reportlab>=4.2.0",
-    "weasyprint>=61.0",
+    "python-docx>=1.2.0",
+    "reportlab>=4.4.4",
+    "weasyprint>=66.0",
 ]
 dev = [
-    "beautifulsoup4>=4.12.0",
-    "langsmith>=0.1.0",
-    "mypy>=1.10.0",
-    "pytest>=8.2.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest-cov>=4.1.0",
-    "ruff>=0.5.0",
-    "selenium>=4.21.0",
+    "beautifulsoup4>=4.14.2",
+    "langsmith>=0.4.31",
+    "mypy>=1.18.2",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.13.2",
+    "selenium>=4.35.0",
+    "sqlalchemy>=2.0.43",
 ]
 
 [project.scripts]
