--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ dependencies = [
     "rich>=14.1.0",
     "pydantic>=2.11.9",
     "pillow>=11.3.0",
-    "typing_extensions>=4.15.0",
+    # Selenium 4.35.0 pins typing_extensions to 4.14.x
+    "typing_extensions>=4.14,<4.15",
 ]
 
 [project.optional-dependencies]
